syntax = "proto3";

package cli_proto;

service Modules {
  rpc List (ModuleListRequest) returns (ModuleListReply);

  rpc Load (stream ModuleLoadPartRequest) returns (ModuleLoadReply);

  rpc Replace(ModuleReplaceRequest) returns (ModuleReplaceReply);

  rpc Unload (ModuleUnloadRequest) returns (ModuleUnloadReply);
}

message ModuleListRequest {}

message ModuleListReply {
  int32 item_no = 1;
  repeated ModuleListReplyItem items = 2;
}

message ModuleListReplyItem {
  string name = 1;
  string status = 2;
  int64 successes = 3;
  int64 failures = 4;
  int64 total_messages = 5;
  double fail_rate_per_minute = 6;
}

message ModuleLoadPartRequest {
  string file_name = 1;
  string inputs = 2;
  string outputs = 3;
  bytes zip_file_bytes = 4;
}

message ModuleLoadReply {
  bool success = 1;
  optional string error_message = 2;
  int64 time = 3;
}

message ModuleReplaceRequest {
  string file_name = 1;
  bytes zip_file_bytes = 2;
}

message ModuleReplaceReply {
  bool success = 1;
  optional string error_message = 2;
  int64 time = 3;
}

message ModuleUnloadRequest {
  string module_name = 1;
}

message ModuleUnloadReply {
  bool success = 1;
  optional string error_message = 2;
  string unloaded_module_name = 3;
  int64 time = 4;
}

service Processes {
  rpc List (ProcessListRequest) returns (ProcessListReply);

  rpc Kill (ProcessKillRequest) returns (ProcessKillReply);
}

message ProcessListRequest {}

message ProcessListReply {
  repeated ProcessReply processes = 1;
}

message ProcessKillRequest {
  repeated string pids = 1;
}

message ProcessKillReply {
  repeated ProcessReply statuses = 1;
}

message ProcessReply {
  string pid = 1;
  string name = 2;
  string status = 3;
  int64 time = 4;
}